# biologix-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .mailmap  Dockerfile  README.md  biologix_ai_mcp_server.py  docker-compose.yml  environment-openmm.yml  environment-simulation.yml  install  insulin_ai_mcp_server.py  plan.md  pyproject.toml  requirements.txt  run  session  sessions.txt  smiles_cache.json  substance_query_result.json
.cursor/: mcp.json.example
.opencode/: MCP_CLI_FALLBACK.md  opencode.jsonc  package-lock.json
benchmarks/: __init__.py  _external_paths.py  append_optuna_comparison_rows.py  comparison_results.tsv  comparison_results_study.tsv  generate_paper_comparison_table.py  ibm_insulin_env.py  ibm_insulin_rl_benchmark.py  ibm_polymer_rl_benchmark.py  md_benchmark.py  optuna_psmiles_discovery.py  plot_ibm_vs_agentic_interaction_energy.py  plot_paper_comparison.py  polymer_generative_models_benchmark.py  random_psmiles_baseline.py  run_optuna_resume_study_b.sh  run_paper_study.sh
docker/: cpu_defaults.sh  entrypoint.sh  restore_terminal.sh
docs/: BENCHMARK_AND_REPRO_STUDY.md  DEPENDENCIES.md  DOCKER.md  MCP_GETTING_STARTED.md  MCP_SERVERS.md  OPENMM_SCREENING.md  OpenCode_PLATFORM.md  PAPER_AGENTIC_EXPERIMENTS.md  PAPER_TABLE2.md  PROJECT_STRUCTURE.md  PSMILES_GUIDE.md  REBRAND_MIGRATION.md  SECURITY.md  SUMMARY_REPORT_STYLE.md  THIRD_PARTY_BENCHMARKS.md  api_reference.md  compile_proposal.sh  fairmeta.cls  method_notes.md  milestones.txt  proposal.tex  proposal_imports.tex
paper/: .gitignore  README.md  compile_main.sh  main.tex  main_imports.tex  references.bib
results/: _smoke_ibm_dqn.json  ibm_dqn.json  ibm_dqn_ablation_target-1000_0.json  ibm_dqn_ablation_target-500_0.json  ibm_dqn_ablation_target-5_0.json  ibm_dqn_live.json  ibm_dqn_seed123.json  ibm_dqn_seed42.json  ibm_dqn_seed456.json  ibm_ppo_seed123.json  ibm_ppo_seed42.json  ibm_ppo_seed456.json  optuna_seed123.json  optuna_seed42.json  optuna_seed456.json
scripts/: build_precursor_db.py  clean_local.sh  clone_external_benchmarks.sh  cursorfix.sh  diagnose_openmm_complex.py  docker_compose_run.sh  docker_cpu_limit.sh  docker_ghcr_run.sh  docker_run.sh  docker_smoke_test.sh  fix_conda_channels_for_biologix_ai.sh  fix_conda_channels_for_insulin_ai.sh  generate_biologics_showcase_chemviz.py  generate_paper_chemviz_figure.py  generate_pdf_report.py  generate_product_demo_assets.sh  generate_psmiles_images.py  host_docker_tty_guard.sh  index_papers.sh  install_biologix_ai_sim_lowmem.sh  install_insulin_ai_sim_lowmem.sh  install_lib.sh  install_micromamba.sh  install_submodules.sh  mcp_sleep_server.py  render_complex_chemviz.py  render_complex_pymol.py  run_autonomous_discovery.py  run_biologics_discovery.py  run_mcp_server.sh  run_openmm_matrix.py  run_plan_retrosynthesis.py  setup_aizynthfinder.sh  verify_install.sh  verify_opencode_mcp_host.sh
tests/: test_api_schemas.py  test_append_optuna_comparison_rows.py  test_asta_client.py  test_biologic_resolver.py  test_build_precursor_db_molport.py  test_compliance.py  (+46 more)
(+144 files in other folders)
